# gtree

./: .gitignore  README.md  gtree.py  pyproject.toml
gtree/: __init__.py  cli.py  colors.py  git_repo.py  tree_renderer.py
